added wikidownloader.py and system_utils.py

--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Must
 
 Should
 ------
+- volitelne logovani na standardni vystup / do souboru
 - stranky projektu (staci na GH) s odkazem na demo na Sketch Engine
 
 
