--- a/TODO
+++ b/TODO
@@ -18,7 +18,8 @@ Must
 
 Should
 ------
-- volitelne logovani na standardni vystup / do souboru
+- volitelne logovani na standardni vystup / do souboru (daneho nejlepe
+  konfiguracnim souborem, spise nez argumentem)
 - stranky projektu (staci na GH) s odkazem na demo na Sketch Engine
 - vyresit namespacy poradne (pokud muzou byt vnorene)
 - unit testy
