--- a/TODO
+++ b/TODO
@@ -44,6 +44,7 @@ Could
 
 Want
 ----
+- stahovani dumpu: kontrola MD5
 - pri moznosti predelavani jiz existujiciho korpusu brat v uvahu data zmen
   prerekvizit a aktualniho souboru (jako make)
 - prubezna aktualizace korpusu? (jednak wiki se porad rozsiruje/meni, jednak by
