--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 Now
 ---
-- presunout funkcionalitu ze skriptu wikidownloader.py a wikisampler.py do
-tridy WikiCorpus
+- presunout funkcionalitu ze skriptu wikisampler.py do tridy WikiCorpus
 
 Must
 ----
