--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
 Must
 ----
 - sestaveni korpusu pro aj a cj a rozjeti na Sketch Engine
-- vyresit problem treetaggeru: "... konec vety. <term>Pojem</term> dalsi veta",
-  podoby problem nastava nekdy i u tag_sentences.py
-- vyresit zanorujici se <section> tagy
-- registry - desamb: doplnit WPOSLIST
+- chybne chovani tag_sentences.py (/usr/bin/tag_sentences, resp.
+  /corpora/ske-toolkit/tag_sentences.py), napr. pro:
+    "... konec vety. <term>Pojem</term> dalsi veta" / vert/problem.vert
+    (tento skritp vola i tree_tagger skripty)
+- jak z kospusu vytahnout 1 dokument (napsat si demo)
 
 Should
 ------
@@ -12,6 +13,7 @@ Should
 - volitelne logovani na standardni vystup / do souboru (daneho nejlepe
   konfiguracnim souborem, spise nez argumentem)
 - stranky projektu (staci na GH) s odkazem na demo na Sketch Engine
+- registry -> WordSketches
 - dalsi testy pro inferenci pojmu
 - vypis informaci o korpusu (--info)
 
@@ -47,4 +49,4 @@ Want
 - WikiCorpus jako potomek obecnejsi tridy korpus (ktera se pozdeji taky bude
   hodit)
 - stranky s redirectem: vyuzit jejich title (aktualne je proste ignorujeme)
-- vyuzit specialni Wiki strnaky (listings)
+- vyuzit specialni Wiki stranky (listings)
