--- a/TODO
+++ b/TODO
@@ -1,11 +1,14 @@
 Must
 ----
+- tvorba konfiguraci pro vsechny dulezite jazyky (inspirace CorpusArchitektem),
+  WordSketche
 - sestaveni korpusu pro aj a cj a rozjeti na Sketch Engine
 - chybne chovani tag_sentences.py (/usr/bin/tag_sentences, resp.
   /corpora/ske-toolkit/tag_sentences.py), napr. pro:
     "... konec vety. <term>Pojem</term> dalsi veta" / vert/problem.vert
     (tento skritp vola i tree_tagger skripty)
-- jak z korpusu vytahnout 1 dokument (napsat si demo)
+- "odbocka" pro moji BP: zachovani pojmu, workaround problemu treetaggeru??,
+  zaindexovani vertikalu
 
 Should
 ------
@@ -18,25 +21,20 @@ Could
 -----
 - rozpoznavani datumu (zavest specialni strukturu?), ale vyuzit jiz oznacenych
   dat (i datumy muzou mit na wiki svoje WURI), pripadne i rozpoznavani dalsich
-  pojmenovanych entit (rozsireni soucasne inference)
-- vylepseni parsovani wikimarkupu, napr. seznamy, mozna i vyzkouset jine
-  parsery WikiMarkupu
+  pojmenovanych entit (rozsireni soucasne inference), pry na to existuje
+  nastroj
+- vylepseni parsovani wikimarkupu, napr. seznamy, tabulky, obrazky (aktualne
+  zahazovano)  mozna i vyzkouset jine parsery WikiMarkupu
 - dalsi testy pro wikimarkup parsing
-- podobne projekty, existujici korpusy z Wikipedie, zalozky
-- rozpoznavani dalsich pojmenovanych entit (zrovna na wiki neni zasadni)
-- zvazit pouziti bezpecnejsich defused packages pro parsovani XML + bezpecnost
-  obecne (je to Wikipedie, takze tam muze byt uplne cokoliv, treba "</doc>")
-- vyzkouset jine pristupy parsovani xml
 
 
 Want
 ----
 - pri moznosti predelavani jiz existujiciho korpusu brat v uvahu data zmen
   prerekvizit a aktualniho souboru (jako make)
-- prubezna aktualizace korpusu? (jednak wiki se porad rozsiruje/meni, jednak by
-  bylo dobre umet vytvaret korpus i z ostatnich jednou zpracovanych stranek)
 - WikiCorpus: kontrola, zda predany jazyk je mezi iso kody
 - WikiCorpus jako potomek obecnejsi tridy korpus (ktera se pozdeji taky bude
   hodit)
 - stranky s redirectem: vyuzit jejich title (aktualne je proste ignorujeme)
-- vyuzit specialni Wiki stranky (listings)
+- vyuzit specialni Wiki stranky (listings) (ale od strukturovanych informaci je
+  tu DBpedia, tohle je korpus...)
